--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,7 +29,7 @@ dependencies {
     compile 'com.github.clans:fab:1.6.2'
     compile 'com.android.support:cardview-v7:23.0.0'
     compile 'com.android.support:recyclerview-v7:23.0.0'
-
+    compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.google.android.gms:play-services-location:8.4.0'
     compile 'com.google.code.gson:gson:2.3'
     compile 'com.github.shell-software:fab:1.0.5'
