--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,12 +14,14 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INTERNET" />
 
+    <service android:name=".GeofenceTransitionsIntentService" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat.DayNight.DarkActionBar">
+        android:theme="@style/Theme.AppCompat.DayNight.NoActionBar">
 
         <activity android:name=".LoginActivity">
             <intent-filter>
@@ -29,13 +31,13 @@
         </activity>
         <activity android:name=".CadastroActivity" />
         <activity android:name=".PrincipalActivity" />
-        <activity android:name=".ContaActivity" />
+        <activity android:name=".ContaActivity"></activity>
+        <activity android:name=".TesteActivity"></activity>
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
-    </application>
 
-    <service android:name=".GeofenceTransitionsIntentService" />
+    </application>
 
 </manifest>
